--- a/THANKS
+++ b/THANKS
@@ -1,2 +1,2 @@
 To Erik Westrup <erik.westrup@gmail.com> for suggesting support of password
-protected MPD servers.
+protected MPD servers and reporting build error.
